# ohtani-homerun

./: README.md  main.py  pyproject.toml  requirements.txt
components/: data_loader.py  layout.py  plot.py
data/: homerun.csv
