[tool.poetry]
name = "ohtani-homerun"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ohtani_homerun"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
