[tool.poetry]
name = "ohtani-homerun"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ohtani_homerun"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
